--- a/style.css
+++ b/style.css
@@ -1,6 +1,59 @@
-.logo {
-    flex: 1;
+:root {
+    --primary--color: #86e6af;
+    --secondary--color: #0f9247;
+    --accent--color: #2efc86;
+    --background--color: #06130c;
+}
+
+body {
+    background-color: var(--background--color);
+    color: var(--primary--color);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+.fa-solid {
+    font-size: 20px;
+    display: flex;
+    gap: 14px;
+}
+
+header, main, footer {
+    max-width: auto;
+    margin: 0 auto;
+    width: 100%;
+    padding: 14px;
+}
+
+
+header {
+    height: 65px;
     display: flex;
     align-items: center;
-    gap: 14px;
+    justify-content: space-between;
+    flex-shrink: 0;
+    background: #06130C;
+    box-shadow: 0px 1px 4px 0px rgba(255, 255, 255, 0.25);
+    padding: 14px;
+}
+
+.profile-picture {
+    border-radius: 100%;
+    max-width: 144px;
+    overflow: hidden;
+}
+
+.profile-picture img {
+    width: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
 }
